# presence_service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: broadcaster.py  config.py  dependencies.py  main.py  manager.py  repository.py  schemas.py
app/utils/: redis_client.py
tests/: conftest.py  test_integration.py  test_unit.py
