[tool.poetry]
name = "presence-service"
version = "0.1.0"
description = "Distributed real-time presence engine"
authors = ["Khushal <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
redis = "^7.1.0"
pydantic-settings = "^2.12.0"
websockets = "^11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
